# gobangx

./: Cargo.toml  LICENSE  README.md  sample.toml
.github/workflows/: ci.yml  release.yml
database-tree/: Cargo.toml
database-tree/src/: databasetree.rs  databasetreeitems.rs  item.rs  lib.rs
sqlparse/: Cargo.toml
sqlparse/src/: formatter.rs  keywords.rs  lexer.rs  lib.rs  tokens.rs  trie.rs
sqlparse/src/engine/: filter_stack.rs  grouping.rs
sqlparse/src/filters/: aligned_indent.rs  mod.rs  others.rs  reindent.rs  tokens.rs
sqlparse/tests/: format.rs  grouping.rs  parse.rs  regressions.rs  tokenize.rs
src/: app.rs  cli.rs  config.rs  main.rs
src/components/: cell_editor.rs  command_editor.rs  completion.rs  connections.rs  database_filter.rs  databases.rs  debug.rs  error.rs  help.rs  help_info.rs  line_editor.rs  mod.rs  properties.rs  recent.rs  record_table.rs  sql_editor.rs  tab.rs  table.rs  table_filter.rs  table_status.rs  table_value.rs
src/components/utils/: highlight.rs  mod.rs  scroll_vertical.rs
src/database/: header.rs  meta.rs  mod.rs  mssql.rs  mysql.rs  postgres.rs  sqlite.rs
src/event/: events.rs  key.rs  mod.rs
src/sql/: mod.rs
src/sql/completion/: advance.rs  mod.rs  plain.rs
src/sql/completion/advance/: completion_engine.rs  mod.rs  sqlcompleter.rs  suggest.rs  updater.rs  utils.rs
src/sql/lang/: mod.rs  mysql.rs  postgresql.rs  standard.rs
src/sql/parse/: keywords.rs  lexer.rs  mod.rs  tokens.rs
src/sql/parse/engine/: grouping.rs  (+2 more)
src/sql/token/: mod.rs  regex_factory.rs  token_type.rs  tokenizer.rs
src/ui/: mod.rs
